LINK_DIRECTORIES(${PROJECT_BINARY_DIR})
INCLUDE_DIRECTORIES(../../../base/util ../../../base/module_setting)
SET(SRC_LIST ../../../base/util/SimulationModule.cpp InorganicPSorption.cpp api.cpp)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR})
ADD_LIBRARY(SORPHO SHARED ${SRC_LIST})
#TARGET_LINK_LIBRARIES(SORPHO libutil.a)
TARGET_LINK_LIBRARIES(SORPHO util module_setting)
SET_TARGET_PROPERTIES(SORPHO PROPERTIES COMPILE_FLAGS "/openmp")
SET_PROPERTY(TARGET SORPHO PROPERTY FOLDER "modules/nutrient")